# detect-audioDevice

./: CMakeLists.txt  Readme.md  build.sh  send.cpp  version.h.in
